--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -26,7 +26,7 @@
     <li>
         <span><%= comment.comment %></span>
         <small>
-        Pada <%= comment.created_at.to_s(:short) %>            
+        pada <%= comment.created_at.to_s(:short) %>  
         </small>
     </li>
     <%- end %>
